# draft

./: .gitignore  debug_test.py  note.txt  pyproject.toml
draft_deck/: card_choice_controller.py  card_choice_frame.py  card_detail_controller.py  card_detail_frame.py  card_display.py  communication_controller.py  deck_list_frame.py  drafter.py  main.py  old_main.py  parse_card_data.py  tk_sample.py
draft_deck/controller/: card_detail_controller.py
draft_deck/model/: communication_controller.py  drafter.py
draft_deck/view/: card_choice_frame.py  card_detail_frame.py  deck_list_frame.py  menu_wait_frame.py
tests/: test_draft_deck.py
